--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
+/* App.css */
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: black;
+  color: white;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.title {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+.sub-title {
+  font-size: 1em;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.input-box {
+  background-color: #333;
   color: white;
+  border: none;
+  padding: 10px;
+  width: 300px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  font-size: 1em;
+  height: auto; /* Allow the input box to grow in height based on content */
+  min-height: 50px; /* Set a minimum height to prevent it from collapsing completely */
+  overflow: hidden; /* Ensure the content is not visible outside the box */
+  resize: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit-button {
+  background-color: green;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 16px;
+  font-size: 1em;
+  cursor: pointer;
 }
